--- a/Healthcare020.Mobile/Healthcare020.Mobile.Android/Resources/layout/Tabbar.xml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.Android/Resources/layout/Tabbar.xml
@@ -2,11 +2,12 @@
 <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sliding_tabs"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:tabIndicatorColor="@android:color/white"
     app:tabGravity="fill"
     app:tabMode="fixed"
-    app:tabTextAppearance="@style/tab_text"/>
+    app:tabTextAppearance="@style/AppTabTextAppearance"
+    android:layout_width="match_parent"
+    style="@style/AppTabLayout"/>
