--- a/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
@@ -14,6 +14,16 @@
                 <themes:LightTheme />
             </ResourceDictionary.MergedDictionaries>
 
+            <!--#region Images-->
+            <OnPlatform x:Key="Logo_Revert_Medium" x:TypeArguments="ImageSource">
+                <On Platform="Android" Value="healthcare020_150x150_revert.png" />
+                <On Platform="UWP" Value="Assets/healthcare020_150x150_revert.png" />
+            </OnPlatform>
+            <OnPlatform x:Key="Logo_Revert" x:TypeArguments="ImageSource">
+                <On Platform="Android" Value="healthcare020_200x200_revert.png" />
+                <On Platform="UWP" Value="Assets/healthcare020_200x200_revert.png" />
+            </OnPlatform>
+            <!--#endregion-->
 
             <!--#region ConstantValues-->
             <x:Int32 x:Key="RowCountZahteviZaPregled">3</x:Int32>
@@ -22,7 +32,6 @@
             <!--#region Thicknesses-->
             <Thickness x:Key="NextPrevNavigationThickness">0,0,0,5</Thickness>
             <!--#endregion-->
-
 
             <!--#region GridLengths-->
             <GridLength x:Key="ZahteviZaPregled1Row">8*</GridLength>
@@ -126,8 +135,8 @@
             </OnPlatform>
 
             <OnPlatform x:Key="Logo" x:TypeArguments="ImageSource">
-                <On Platform="Android" Value="healthcare020_350x350.png" />
-                <On Platform="UWP" Value="Assets/healthcare020_350x350.png" />
+                <On Platform="Android" Value="healthcare020_200x200.png" />
+                <On Platform="UWP" Value="Assets/healthcare020_200x200.png" />
             </OnPlatform>
 
             <Style TargetType="NavigationPage">
@@ -166,6 +175,29 @@
                 <Setter Property="TextColor" Value="WhiteSmoke" />
                 <Setter Property="FontSize" Value="{StaticResource FontSize-Small}" />
             </Style>
+
+            <Style x:Key="TitleLabelStyle" TargetType="Label">
+                <Setter Property="HorizontalOptions">Center</Setter>
+                <Setter Property="Margin">0,10</Setter>
+                <Setter Property="FontFamily" Value="{StaticResource Montserrat-SemiBold}" />
+                <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}" />
+                <Setter Property="TextColor" Value="{StaticResource CustomNavyBlueDark}" />
+            </Style>
+
+            <Style x:Key="CustomEntryStyle" TargetType="Entry">
+                <Setter Property="Margin">10</Setter>
+                <Setter Property="FontSize" Value="{StaticResource FontSize-Small}" />
+                <Setter Property="FontFamily" Value="{StaticResource Montserrat-Regular}" />
+            </Style>
+
+            <Style x:Key="CustomEditorStyle" TargetType="Editor">
+                <Setter Property="Margin">10</Setter>
+                <Setter Property="AutoSize" Value="TextChanges" />
+                <Setter Property="Keyboard">Plain</Setter>
+                <Setter Property="MaxLength">180</Setter>
+                <Setter Property="FontSize" Value="{StaticResource FontSize-Small}" />
+                <Setter Property="FontFamily" Value="{StaticResource Montserrat-Regular}" />
+            </Style>
             <!--#endregion-->
 
             <!--#region RegisterPage style-->
@@ -177,10 +209,7 @@
                 <Setter Property="Fill" Value="#65DBDB" />
                 <Setter Property="VerticalOptions" Value="FillAndExpand" />
             </Style>
-            <OnPlatform x:Key="Logo_Revert" x:TypeArguments="ImageSource">
-                <On Platform="Android" Value="healthcare020_200x200_revert.png" />
-                <On Platform="UWP" Value="Assets/healthcare020_350x350_revert.png" />
-            </OnPlatform>
+
             <Style x:Key="LogoImage" TargetType="Image">
                 <Setter Property="HorizontalOptions" Value="End" />
                 <Setter Property="VerticalOptions" Value="Start" />
@@ -259,6 +288,13 @@
                 <Setter Property="Padding">50,20</Setter>
                 <Setter Property="VerticalOptions">FillAndExpand</Setter>
                 <Setter Property="HorizontalOptions">Center</Setter>
+            </Style>
+            <!--#endregion-->
+
+
+            <!--#region NoviZahtevZaPregledPage styles-->
+            <Style x:Key="MainStackNoviZahtevZaPregledStyle" TargetType="StackLayout">
+                <Setter Property="Margin" Value="20,120,20,0" />
             </Style>
             <!--#endregion-->
         </ResourceDictionary>
