--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/NoviZahtevZaPregledPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/NoviZahtevZaPregledPage.xaml
@@ -1,12 +1,94 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<views:BaseValidationContentPage
     x:Class="Healthcare020.Mobile.Views.NoviZahtevZaPregledPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:Healthcare020.Mobile.Views;assembly=Healthcare020.Mobile"
     mc:Ignorable="d">
     <ContentPage.Content>
+        <Grid>
+            <StackLayout Margin="0" Padding="0">
+                <Grid
+                    HorizontalOptions="FillAndExpand"
+                    RowSpacing="0"
+                    VerticalOptions="FillAndExpand">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Frame Grid.Column="0" BackgroundColor="#00bebe">
+                        <Frame
+                            Margin="0,-20,0,0"
+                            BackgroundColor="Transparent"
+                            VerticalOptions="Start">
+                            <Image
+                                Aspect="AspectFit"
+                                HorizontalOptions="Center"
+                                Source="{StaticResource Logo_Revert_Medium}" />
+                        </Frame>
+                    </Frame>
+                    <Frame Grid.Column="1" BackgroundColor="WhiteSmoke" />
+                </Grid>
+            </StackLayout>
+            <StackLayout Style="{StaticResource MainStackNoviZahtevZaPregledStyle}" VerticalOptions="CenterAndExpand">
+                <Frame
+                    Margin="0"
+                    Padding="0"
+                    BackgroundColor="White"
+                    HasShadow="False"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="FillAndExpand">
+                    <StackLayout Spacing="10" Style="{StaticResource LoginFormBodyStyle}">
+                        <StackLayout>
+                            <Label Style="{StaticResource TitleLabelStyle}" Text="Zakazivanje pregleda" />
+                            <BoxView BackgroundColor="LightGray" HeightRequest=".1" />
+                        </StackLayout>
+                        <!--  FORM BODY  -->
+                        <StackLayout x:Name="FormBody" Spacing="0">
+                            <StackLayout.Resources>
+                                <Style BasedOn="{StaticResource CustomValidationLabel}" TargetType="Label" />
+                            </StackLayout.Resources>
+                            <Picker
+                                x:Name="DoktoriPicker"
+                                Title="-- Odaberite doktora * --"
+                                Margin="10"
+                                ClassId="PickedDoktor"
+                                ItemDisplayBinding="{Binding Radnik.ImePrezime}"
+                                ItemsSource="{Binding Doktori}"
+                                SelectedItem="{Binding PickedDoktor}" />
+                            <Label x:Name="PickedDoktorValidation" />
 
+                            <StackLayout HeightRequest="180">
+                                <Editor
+                                    ClassId="Napomena"
+                                    Placeholder="Napomena"
+                                    Style="{StaticResource CustomEditorStyle}"
+                                    Text="{Binding Napomena}"
+                                    VerticalOptions="CenterAndExpand" />
+                            </StackLayout>
+                            <Label x:Name="NapomenaValidation" />
+                        </StackLayout>
+                        <!--  /FORM BODY  -->
+
+                        <!--  Save BUTTON  -->
+                        <Frame
+                            Padding="0"
+                            HasShadow="False"
+                            HorizontalOptions="FillAndExpand">
+                            <Button
+                                x:Name="ProslediButton"
+                                BackgroundColor="#00bebe"
+                                Clicked="ProslediButton_OnClicked"
+                                Style="{StaticResource BigButtonRadiusStyle}"
+                                Text="Prosledi"
+                                TextColor="WhiteSmoke" />
+                        </Frame>
+                        <!--  /FORM BODY  -->
+                    </StackLayout>
+                </Frame>
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
-</ContentPage>
+</views:BaseValidationContentPage>
