--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/ZakazaniPreglediPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/ZakazaniPreglediPage.xaml
@@ -5,13 +5,33 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:Healthcare020.Mobile.ViewModels;assembly=Healthcare020.Mobile"
     mc:Ignorable="d">
+
+    <ContentPage.BindingContext>
+        <viewModels:ZakazaniPreglediViewModel />
+    </ContentPage.BindingContext>
     <ContentPage.Content>
-        <StackLayout>
-            <Label
-                HorizontalOptions="CenterAndExpand"
-                Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid Padding="0" BackgroundColor="{StaticResource LightSmokeWhite}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="{StaticResource ZahteviZaPregled1Row}" />
+            </Grid.RowDefinitions>
+            <Frame
+                Grid.Row="0"
+                BackgroundColor="{StaticResource LightSmokeWhite}"
+                BorderColor="Transparent"
+                HasShadow="False"
+                HorizontalOptions="FillAndExpand">
+                <Image
+                    Aspect="AspectFit"
+                    HorizontalOptions="Center"
+                    Source="{StaticResource Logo}" />
+            </Frame>
+            <StackLayout
+                Grid.Row="1"
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand" />
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
