--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/ZakazaniPreglediPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/ZakazaniPreglediPage.xaml
@@ -3,7 +3,9 @@
     x:Class="Healthcare020.Mobile.Views.ZakazaniPreglediPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:customViews="clr-namespace:Healthcare020.Mobile.CustomViews;assembly=Healthcare020.Mobile"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:entities="clr-namespace:HealthCare020.Core.Entities;assembly=HealthCare020.Core"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:Healthcare020.Mobile.ViewModels;assembly=Healthcare020.Mobile"
     mc:Ignorable="d">
@@ -31,7 +33,9 @@
             <StackLayout
                 Grid.Row="1"
                 HorizontalOptions="FillAndExpand"
-                VerticalOptions="FillAndExpand" />
+                VerticalOptions="FillAndExpand">
+                <customViews:CustomCollectionView MainCollection="{Binding ZakazaniPregledi}" />
+            </StackLayout>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
